Add README.md. Adjust minimum poll interval.

--- a/idic.toml
+++ b/idic.toml
@@ -34,7 +34,10 @@ active_stat_groups = [
 # of the minimum interval, which defaults to 30 seconds, is to prevent
 # the daemon's queries from putting too much stress on the cluster.
 # The default value is 30 seconds.
-# min_update_interval_override = 15
+#
+# The most-frequent stat update interval is 5 seconds and that does not seem to
+# present excessive load in internal testing, so set that here.
+min_update_interval_override = 5
 
 # clusters in this section are queried for all stat groups
 # clusters: [username1:password1@]<ip-or-host-address1>[:True|False]
