--- a/idic.toml
+++ b/idic.toml
@@ -15,6 +15,12 @@ stats_processor_args = [ "localhost", "8086", "isi_data_insights" ]
 # stat_processor = "discard_plugin"
 stat_processor_args = []
 
+# If set to 0 or -1, authentication will be retried indefintely
+# There is still an exponential backoff that is clamped to a maximum of
+# 30 minutes.
+# Default is still 8 retries. Uncomment the following line to retry forever
+# max_retries = 0
+
 # Specifies the active list of stat groups to query, each stat group name
 # specified here should have a corresponding section in the config file.
 active_stat_groups = [
