--- a/example_isi_data_insights_d.toml
+++ b/example_isi_data_insights_d.toml
@@ -1,15 +1,28 @@
 [global]
-# Parameters specified on the command line will supersede the parameters
-# in this section.
-# pid_file: /var/run/isi_data_insights_d.pid
-# log_file: /var/run/isi_data_insights_d.log
-# default log_level is INFO
-# log_level = "DEBUG"
+# Pluggable back end support
+# Default configuration uses InfluxDB (v1)
 stats_processor = "influxdb_plugin"
-# Use "auth" as the 4th arg in order to be prompted for the
-# InfluxDB username and password stats_processor_args, example:
-# localhost 8086 isi_data_insights auth
+# The first three arguments are the host/IP, port and database for the InfluxDB database
+# Optionally, pass the InfluxDB username and password as the fourth and fifth arguments, e.g.:
+# localhost 8086 isi_data_insights influxdbuser influxdbpass
 stats_processor_args = [ "localhost", "8086", "isi_data_insights" ]
+
+# Prometheus collector support
+# stats_processor = "prometheus_plugin"
+# The port configuration has moved to the cluster section since it must be different for each cluster
+# The optional first and second arguments are used for basic auth support
+# stats_processor_args = []
+# stats_processor_args = ["promuser", "prompass" ]
+
+# Alternative back end which collects and discards the data (for testing)
+# stats_processor = "discard_plugin"
+# stats_processor_args = []
+
+# If set to 0 or -1, authentication will be retried indefintely
+# There is still an exponential backoff that is clamped to a maximum of
+# 30 minutes.
+# Default is still 8 retries. Uncomment the following line to retry forever
+# max_retries = 0
 
 # Specifies the active list of stat groups to query, each stat group name
 # specified here should have a corresponding section in the config file.
@@ -29,23 +42,27 @@ active_stat_groups = [
     "heat_total_stats",
 ]
 
-# The min_update_interval_override param provides ability to override the
-# minimum interval that the daemon will query for a set of stats. The purpose
-# of the minimum interval, which defaults to 30 seconds, is to prevent
-# the daemon's queries from putting too much stress on the cluster.
-# The default value is 30 seconds.
-# min_update_interval_override = 15
+# The min_update_interval_override parameter provides the ability to override the
+# minimum interval that the daemon will query for a set of stats.
+# By default, the collector queries the API and collects the stats in buckets based
+# on the stat metadata  update interval.
+# If there is concern over the load presented by collection, or a less frequent
+# collection interval is desired/required, this value can be increased.
+#
+# The lowest stat update interval is 5 seconds and that does not seem to
+# present excessive load in internal testing, so set that here.
+min_update_interval_override = 5
 
 # clusters in this section are queried for all stat groups
-# clusters: [username1:password1@]<ip-or-host-address1>[:True|False]
-#	[[username2:password2]@<ip-or-host-address2>[:True|False]]
-#	[[username3:password3]@<ip-or-host-address3>[:True|False]]
+# [[cluster]]
+# hostname = "mycluster.xyz.com"
+# username = "statsuser"
+# password = "sekr1t"
+# verify-ssl = false
+# authtype = "basic-auth"
+# disabled = false
+# prometheus_port = 9090
 #	...
-# If you don't specify the username and password then you will be prompted
-# for them when the daemon starts up.
-# Use the optional True or False on the end to specify whether the cluster's
-# SSL certificate should be verified. If it is omitted then the default is
-# False (i.e. don't verify SSL cert).
 [[cluster]]
 hostname = "demo.cluster.com"
 username = "root"
@@ -55,9 +72,6 @@ verify-ssl = true
 # Definitions of the various groups of statistics to collect
 [[statgroup]]
 name = "cluster_cpu_stats"
-# The clusters (optional) param defines a list of clusters specific to this
-# group.
-# clusters: 10.25.69.74 10.25.69.75
 # update interval is in seconds or use *<number> to base the update interval
 # off each stat's collection interval (i.e. *2 == 2 times the collection
 # interval, *1 == * == 1 times the collection invterval of each stat)
@@ -149,7 +163,6 @@ stats = [
     "node.load.15min",
     "node.memory.used",
     "node.memory.free",
-    "node.memory.cache",
     "node.open.files",
 ]
 
