--- a/example_isi_data_insights_d.toml
+++ b/example_isi_data_insights_d.toml
@@ -4,32 +4,25 @@
 # This field ties the config file syntax/format back to the collector version.
 # This allows the collector to flag breaking changes where the config file needs to be updated.
 # string optionally starting with "v"/"V" e.g., "v0.10", or "0.10"
-version = "v0.17"
+version = "v0.18"
 
 # Pluggable back end support
+# Supported back ends are "influxdb", "prometheus" and "discard"
 # Default configuration uses InfluxDB (v1)
-stats_processor = "influxdb_plugin"
-# The first three arguments are the host/IP, port and database for the InfluxDB database
-# Optionally, pass the InfluxDB username and password as the fourth and fifth arguments, e.g.:
-# localhost 8086 isi_data_insights influxdbuser influxdbpass
-stats_processor_args = [ "localhost", "8086", "isi_data_insights" ]
+stats_processor = "influxdb"
 
-# Prometheus collector support
-# stats_processor = "prometheus_plugin"
-# The port configuration has moved to the cluster section since it must be different for each cluster
-# The optional first and second arguments are used for basic auth support
-# stats_processor_args = []
-# stats_processor_args = ["promuser", "prompass" ]
-
-# Alternative back end which collects and discards the data (for testing)
-# stats_processor = "discard_plugin"
-# stats_processor_args = []
-
-# If set to 0 or -1, authentication will be retried indefintely
-# There is still an exponential backoff that is clamped to a maximum of
-# 30 minutes.
-# Default is still 8 retries. Uncomment the following line to retry forever
+# Maximum number of retries for http requests (both data and auth)
+# Default is 8 retries. Uncomment the following line to retry forever
 # max_retries = 0
+
+# The min_update_interval_override parameter provides the ability to override the
+# minimum interval that the daemon will query for a set of stats.
+# By default, the collector queries the API and collects the stats in buckets based
+# on the stat metadata update interval.
+# If there is concern over the load presented by collection, or a less frequent
+# collection interval is desired/required, this value can be increased.
+# The minimum permitted (and default) stat update interval is 5 seconds 
+min_update_interval_override = 5
 
 # Specifies the active list of stat groups to query, each stat group name
 # specified here should have a corresponding section in the config file.
@@ -49,16 +42,28 @@ active_stat_groups = [
     "heat_total_stats",
 ]
 
-# The min_update_interval_override parameter provides the ability to override the
-# minimum interval that the daemon will query for a set of stats.
-# By default, the collector queries the API and collects the stats in buckets based
-# on the stat metadata update interval.
-# If there is concern over the load presented by collection, or a less frequent
-# collection interval is desired/required, this value can be increased.
-#
-# The lowest stat update interval is 5 seconds and that does not seem to
-# present excessive load in internal testing, so set that here.
-min_update_interval_override = 5
+############################ End of global section ############################
+
+############################ Back end configuration ###########################
+# Influxdb configuration
+[influxdb]
+host = "localhost"
+port = "8086"
+database = "isi_data_insights"
+authenticated = false
+# username = "influxuser"
+# password = "influxpass"
+
+# Prometheus configuration
+[prometheus]
+# optional basic auth
+authenticated = false
+# username = "promuser"
+# password = "prompass"
+
+# discard back end currently has no configurable options and hence no config stanza
+
+######################## End of back end configuration ########################
 
 # If using prometheus, the collector supports the Prometheus "http SD" service
 # discovery mechanism.
@@ -69,6 +74,8 @@ min_update_interval_override = 5
 enabled = false
 # listen_addr = "external_hostname"
 sd_port = 9999
+
+############################# Cluster configuration ###########################
 
 # clusters in this section are queried for all stat groups
 # [[cluster]]
@@ -85,6 +92,10 @@ hostname = "demo.cluster.com"
 username = "root"
 password = "a"
 verify-ssl = true
+
+######################### End of cluster configuration ########################
+
+############################ Stat group definitions ###########################
 
 # Definitions of the various groups of statistics to collect
 [[statgroup]]
@@ -283,3 +294,5 @@ stats = [
     "node.ifs.heat.getattr.total",
     "node.ifs.heat.setattr.total",
 ]
+
+######################### End of stat group definitions #######################
