Plumb in support for TLS-encrypted endpoints
The code was already there but not plumbed in to the config file.

--- a/example_isi_data_insights_d.toml
+++ b/example_isi_data_insights_d.toml
@@ -60,6 +60,8 @@ authenticated = false
 authenticated = false
 # username = "promuser"
 # password = "prompass"
+# tls_cert = "/path/to/certificate"
+# tls_key = "/path/to/key"
 
 # discard back end currently has no configurable options and hence no config stanza
 
