--- a/example_isi_data_insights_d.toml
+++ b/example_isi_data_insights_d.toml
@@ -4,7 +4,7 @@
 # This field ties the config file syntax/format back to the collector version.
 # This allows the collector to flag breaking changes where the config file needs to be updated.
 # string optionally starting with "v"/"V" e.g., "v0.10", or "0.10"
-version = "v0.24"
+version = "v0.25"
 
 logfile = "gostats.log"
 log_to_stdout = false
@@ -126,6 +126,13 @@ password = "a"
 verify-ssl = true
 
 ######################### End of cluster configuration ########################
+
+##################### Summary stat group configuration ########################
+
+[summary_stats]
+protocol = false
+
+################## End of summary stat group configuration ####################
 
 ############################ Stat group definitions ###########################
 
