Switch to log/slog for logging
There are several factors driving the change:
1. The original package I used as not been updated for a long time.
2. Structured logging is good.
3. log/slog is now part of the standard library.
4. the change will allow multiple loggers with differning log levels
   which will enable e.g. trace level logging of only the API calls.

This is a breaking change wrt config file format as the config file now
has a distinct section for logging configuration.

--- a/example_isi_data_insights_d.toml
+++ b/example_isi_data_insights_d.toml
@@ -4,10 +4,7 @@
 # This field ties the config file syntax/format back to the collector version.
 # This allows the collector to flag breaking changes where the config file needs to be updated.
 # string optionally starting with "v"/"V" e.g., "v0.10", or "0.10"
-version = "v0.30"
-
-logfile = "gostats.log"
-log_to_stdout = false
+version = "v0.31"
 
 # Pluggable back end support
 # Supported back ends are "influxdb", "influxdbv2", "prometheus" and "discard"
@@ -58,6 +55,17 @@ active_stat_groups = [
 ]
 
 ############################ End of global section ############################
+
+############################# Logging configuration ###########################
+
+[logging]
+logfile = "gostats.log"
+logfile_format = "text"  # text or json
+# log_level = "info"       # trace, debug, info, notice, warn, error, critical
+# Whether to also log to stdout
+log_to_stdout = false
+
+######################### End of Logging configuration ########################
 
 ############################ Back end configuration ###########################
 # Influxdb configuration
